# kudu

./: .clang-format  .gitignore  CMakeLists.txt  ERC20.sol  ERC20_marked.sol  KongNFT.sol  KongNFT_marked.sol  Prepass.cpp  Prepass.h  Prepass.hpp  StorageVariables.cpp  StorageVariables.hpp  UniswapV3Router.sol  WarpVisitor.cpp  WarpVisitor.h  WarpVisitor.hpp  a.cpp  build-and-check.sh  build.sh  c2c_marked.sol  check.cpp  erc.cpp  erc.yul  ex.cairo  gen-yul-json-ast.cpp  kudu.cpp  library.h  library.hpp  readme.MD  readme.org  res.cpp  res.txt  router.sol  scratch.cpp  t.cpp  yul-gen.cpp  yul-gen.h
.circleci/: config.yml
.github/workflows/: build.yml  release.sh  release.yaml
cmake/: clang-format-tool.cmake
common/: library.cpp  library.hpp
example_contracts/: ERC20.sol  ERC20_marked.sol  KongNFT.sol  Meebits.sol  UniswapV2Trader.sol  UniswapV3Router.sol  UniswapV3Router_marked.sol  constructors.sol
example_contracts/UniswapV3/: Address.sol  BytesLib.sol  CallbackValidation.sol  ERC721Permit.sol  IERC20Metadata.sol  IUniswapV3Pool.sol  IWETH9.sol  LiquidityManagement.sol  Multicall.sol  NFTSVG.sol  NonfungiblePositionManager.sol  NonfungibleTokenPositionDescriptor.sol  Oracle.sol  OracleLibrary.sol  PeripheryImmutableState.sol  PoolAddress.sol  PoolInitializer.sol  PoolTicksCounter.sol  PositionValue.sol  Quoter.sol  QuoterV2.sol  SwapRouter.sol  SwapRouter_marked.sol  TickBitmap.sol  TickLens.sol  TokenRatioSortOrder.sol  UniswapInterfaceMulticall.sol  UniswapV3Factory.sol  UniswapV3Pool.sol  UniswapV3PoolDeployer.sol  V3Migrator.sol  WeightedOracleLibrary.sol
example_contracts/interfaces/: IUniswapV2Pair.sol  IUniswapV3Pool.sol
example_contracts/interfaces/pool/: IUniswapV3PoolActions.sol  IUniswapV3PoolDerivedState.sol  IUniswapV3PoolEvents.sol  IUniswapV3PoolImmutables.sol  IUniswapV3PoolOwnerActions.sol
libwarp/: fmt.sh
libwarp/common/: library.cpp  library.hpp
libwarp/solidity_prepass/: SolidityModifier.cpp  SolidityModifier.hpp  SolidityModifierState.cpp  SolidityModifierState.hpp  WarpVisitor.cpp  WarpVisitor.hpp
libwarp/yul_prepass/: YulCleaner.cpp  YulCleaner.hpp  YulVisitor.cpp  YulVisitor.hpp
solidity_prepass/: StorageVariables.cpp  StorageVariables.hpp  WarpVisitor.cpp  WarpVisitor.hpp
yul_prepass/: Prepass.cpp  Prepass.hpp  YulCleaner.cpp  YulCleaner.hpp  YulVisitor.cpp  YulVisitor.hpp
